--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="footerSocial">
                 <div class="left">
-                    <p>© 2019 Brand All Rights Reserved.</p>
+                    <p>2019 Brand All Rights Reserved.</p>
                 </div>
                 <div class="right">
                     <ul>
