--- a/ht2/myProject/app/index.html
+++ b/ht2/myProject/app/index.html
@@ -6,7 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Home Task #2</title>
 </head>
 <body>
@@ -14,13 +15,15 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <a class="navbar-brand" href="#">E-Shop</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <form class="form-inline">
                     <button type="button" class="btn btn-outline-danger" onclick="window.location='#'">Магазин</button>
-                    <button type="button" class="btn btn-outline-danger" onclick="window.location='#'">Бургерная</button>
+                    <button type="button" class="btn btn-outline-danger" onclick="window.location='#'">Бургерная
+                    </button>
                     <div class="stretch"></div>
                     <div class="cart-account"><i class="fas fa-cart-plus"></i></div>
                 </form>
@@ -31,64 +34,108 @@
 </header>
 <main>
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                    <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">1</p>
-                        <button type="button" class="btn btn-outline-danger">Купить</button>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">1</p>
+                            <button type="button" class="btn btn-outline-danger">Купить</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
-                    <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">1</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">1</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">1</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </div>
+
+
 </main>
 <footer>
-   <div class="container">
-       <div class="data"> d
-           2019
-       </div>
-       <div class="stretch"></div>
-       <div class="social">
-           <ul>
-               <li><a href="https://t.me/cjkasd" target="_blank"><i class="fab fa-telegram"></i></a></li>
-               <li><a href="https://github.com/cosmos-29" target="_blank"><i class="fab fa-github"></i></a></li>
-           </ul>
-       </div>
-   </div>
+    <div class="container">
+        <div class="data">
+            2019
+        </div>
+        <div class="stretch"></div>
+        <div class="social">
+            <ul>
+                <li><a href="https://t.me/cjkasd" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                <li><a href="https://github.com/cosmos-29" target="_blank"><i class="fab fa-github"></i></a></li>
+            </ul>
+        </div>
+    </div>
     <script src="js/jquery.slim.min.js"></script>
     <script src="js/popper.js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
