--- a/ht2/myProject/app/index.html
+++ b/ht2/myProject/app/index.html
@@ -36,87 +36,7 @@
     <div class="container">
 
             <div class="row">
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <img src="https://placehold.it/180x180" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">1</p>
-                            <button type="button" class="btn btn-outline-danger">Купить</button>
-                        </div>
-                    </div>
-                </div>
             </div>
 
     </div>
@@ -139,6 +59,7 @@
     <script src="js/jquery.slim.min.js"></script>
     <script src="js/popper.js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </footer>
 </body>
 </html>
