--- a/ht2/myProject/app/index.html
+++ b/ht2/myProject/app/index.html
@@ -21,8 +21,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <form class="form-inline">
-                    <button type="button" class="btn btn-outline-danger" onclick="window.location='#'">Магазин</button>
-                    <button type="button" class="btn btn-outline-danger" onclick="window.location='#'">Бургерная
+                    <button type="button" class="btn btn-outline-danger" onclick="window.location='index.html'">Магазин</button>
+                    <button type="button" class="btn btn-outline-danger" onclick="window.location='hamburgers.html'">Бургерная
                     </button>
                     <div class="stretch"></div>
                     <div class="cart-account"><i class="fas fa-cart-plus"></i></div>
@@ -35,7 +35,7 @@
 <main>
     <div class="container">
 
-            <div class="row">
+            <div class="row forItems">
 
             </div>
 
@@ -45,9 +45,7 @@
 </main>
 <footer>
     <div class="container">
-        <div class="data">
-            2019
-        </div>
+        <div class="data"></div>
         <div class="stretch"></div>
         <div class="social">
             <ul>
@@ -59,7 +57,7 @@
     <script src="js/jquery.slim.min.js"></script>
     <script src="js/popper.js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main_task1-2.js"></script>
 </footer>
 </body>
 </html>
