Сделано до конца бургерная.

--- a/ht2/myProject/app/hamburgers.html
+++ b/ht2/myProject/app/hamburgers.html
@@ -55,6 +55,9 @@
                         <input type="checkbox" name="topings" id="mayonnaise" value="Mayo" class="hamburger-input" data-price="20" data-calories="5">
                         <label for="mayonnaise">Полить Майонезом (20 рублей, 5 калорий)</label>
                     </fieldset>
+                    <div class="check">Собрать Бургер</div>
+                    <p id="result"> Итоговая стоимость: <span id="price">0</span> <br>
+                    Количество калорий: <span id="caolories">0</span>                    </p>
                 </fieldset>
                  </form>
             </div>
