--- a/ht3/app/index.html
+++ b/ht3/app/index.html
@@ -31,24 +31,30 @@
                     </button>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-outline-danger">Save changes</button>
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+                                    </div>
+                                    
+                                        <div class="conteiner">
+                                            <container-fluid>
+                                            <div class="row">
+                                                <div class="col-md-4">Наименование Товара</div>
+                                                <div class="col-md-4">Количество</div>
+                                                <div class="col-md-4">Стоимость единицы</div>
+                                            </div>
+                                        </container-fluid>
+                                        </div>
+                                    
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-outline-danger">Save changes</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
                 </form>
             </div>
