--- a/ht6/advancedVersion/index.html
+++ b/ht6/advancedVersion/index.html
@@ -38,6 +38,7 @@
     </header>
     <main>
         <div class="container">
+            <error></error>
             <products ref="products"></products>
         </div>
     </main>
