--- a/ht6/advancedVersion/index.html
+++ b/ht6/advancedVersion/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <div id="app">
+    <error ref="error"></error>
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -38,7 +39,7 @@
     </header>
     <main>
         <div class="container">
-            <error></error>
+
             <products ref="products"></products>
         </div>
     </main>
