--- a/ht5/index.html
+++ b/ht5/index.html
@@ -45,6 +45,7 @@
                                         <p class="product-quantity">{{item.quantity}}</p>
                                         <p class="product-single-price">{{item.price}} $</p>
                                     </div>
+                                    </div>
                                 </div>
                                 <div class="right-block">
                                     <p class="product-price">{{item.quantity*item.price}}</p>
